fix(history): fix history element spacing

--- a/app/components/account-card/styles.scss
+++ b/app/components/account-card/styles.scss
@@ -1,5 +1,9 @@
 a {
   outline: none;
+
+  &.active .account-card-content {
+    transform: scale(1.10) !important;
+  }
 }
 
 .account-card-content {
